# Acanthophis

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  MANIFEST.in  README.md  Snakefile  Snakemake  config.yml  documentation.md  pyproject.toml  setup.cfg
.github/workflows/: joss.yml  python-publish.yml  run-snakemake.yml
acanthophis/: __init__.py  _version.py  cmd.py
acanthophis/envs/: qcstats.yml
acanthophis/examples/: Snakemake
acanthophis/profiles/cobra.mpcdf/: README.md  cluster.yml  jobsubmit  submit.sh
acanthophis/profiles/ebio-cluster/: cluster.yml  config.yaml  jobscript.sh  jobsubmit  resources.yml  run.job  submit.sh
acanthophis/profiles/gadi.nci.org.au/: cluster.yml
acanthophis/profiles/local/: resources.yml
acanthophis/rules/: align.rules  base.rules  denovo.rules  gatk.rules  kaiju.rules  kraken.rules  metagenome.rules  multiqc.rules  qualimap.rules  reads.rules  taxonid.rules  varcall.rules  variantannotation.rules
acanthophis/rules/envs/: centrifuge.yml  global.yml  idxcov.yml  kaiju.yml  kraken.yml  kwip.yml  qualimap.yml  snpeff.yml  sra.yml
acanthophis/template/: Snakefile  config.yml  environment.yml
acanthophis/template/rawdata/: all.txt  nextera.txt
acanthophis/template/workflow/: Snakefile  config.schema.yml
acanthophis/template/workflow/rules/: align.rules  base.rules  deepvariant.rules  (+7 more)
acantophis/: __init__.py
acantophis/envs/: abra2.yml  align.yml  global.yml  kraken.yml  qcstats.yml  reads.yml  varcall.yml
acantophis/examples/: Snakemake
acantophis/rules/: align.rules  alignment_stats.rules  bamprocessing.rules  kraken.rules  kwip.rules  multiqc.rules  reads.rules  readstats.rules  samplefastq.rules  varcall.rules  variantannotation.rules
acantophis/rules/junk/: variantannotation.rules
cluster-configs/ebio-cluster/: jobscript.sh  jobstatus  run.job
cluster-configs/gadi.nci.org.au/: cluster.yml  config.yaml  jobscript.sh  jobstatus  jobsubmit  submit.sh
envs/: global.yml
example/: .gitignore  README.md  Snakefile  Snakefile.generate-rawdata  conda.yml  config.yml  environment-setup.yml  environment.yml  environment_demo.yml  rules  setup.sh
example/lambda/: lambda.fasta  lambda.gtf
fake-dataset/: Snakefile  conda.yml  requirements.txt
fake-dataset/lambda/: lambda.gff
paper/: paper.bib  paper.md
rules/: adaptorremoval.rules  aligntoref.rules  bcfmerge.rules  bcftools-norm-filter.rules  freebayes.rules  mash.rules  mpileup.rules
tests/: .config_quick.yml  .gitignore  README.md  Snakefile.generate-rawdata  environment-setup.yml  quick.sh  setup.sh  test.sh
tests/rawdata/: nobackup
tests/rawdata/lambda/: centrifuge-map.txt
(+26 files in other folders)
