[metadata]
name = acantophis
version = 0.0.1
author = Dr. K. D. Murray
author_email = foss@kdmurray.id.au
description = A comprehensive, opinionated plant variant calling pipeline in Snakemake
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kdm9/acantophis
project_urls =
    Bug Tracker = https://github.com/kdm9/acantophis/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2
    Operating System :: OS Independent

[options]
packages = acantophis
include_package_data = True
python_requires = >=3.7

[options.package_data]
* = rules/*.rules, envs/*.yml, examples/*
