[metadata]
name = acanthophis
author = Dr. K. D. Murray
author_email = foss@kdmurray.id.au
description = A comprehensive, opinionated plant variant calling pipeline in Snakemake
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kdm9/acanthophis
project_urls =
    Bug Tracker = https://github.com/kdm9/acanthophis/issues
    Source = https://github.com/kdm9/acanthophis
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Unix Shell
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = acanthophis
include_package_data = True
python_requires = >=3.7
setup_requires =
    setuptools_scm
    setuptools_scm_git_archive

[bdist_wheel]
universal=1

[options.entry_points]
console_scripts =
    acanthophis-init = acanthophis.cmd:init

[options.package_data]
* = rules/*.rules, envs/*.yml, examples/*
